processed/gerrit/txt/64569.txt
Change:     64569
Subject:    LU-19986 build: Avoid typedef unsigned int bool
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/64569
Change-Id:  I4dba3ca1d219f9e64edc72c2965974efa86a7c8c
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Shaun Tancheff
Created:    2026-03-14 03:39:05.000000000
Updated:    2026-04-18 19:39:48.000000000
Patch Set:  3
Insertions: +1
Deletions:  -2
Comments:   3 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Chris Horn: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  CC: Andreas Dilger
  REVIEWER: Oleg Drokin, James Simmons, Chris Horn, Sebastien Buisson, Serguei Smirnov, Timothy Day

--- Commit Message ---
LU-19986 build: Avoid typedef unsigned int bool

Instead include the header to ensure bool is available:

The resolves a build failure:
...
lutf_global_wrap.c:3238:22: error: bool cannot be defined via typedef
 3238 | typedef unsigned int bool;
      |                      ^~~~
lutf_global_wrap.c:3238:22: note: 'bool' is a keyword with '-std=c23'
...

Test-Parameters: trivial
HPE-bug-id: LUS-13285
Test-Parameters: trivial
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I4dba3ca1d219f9e64edc72c2965974efa86a7c8c
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64569
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>

--- Review History ---

--- Message (Shaun Tancheff, 2026-03-14 03:39:05.000000000) ---
Uploaded patch set 1.

--- Message (Lustre Gerrit Janitor, 2026-03-14 03:39:47.000000000) ---
Patch Set 1:

Cannot detect any functional changes in this patch

--- Message (Shaun Tancheff, 2026-03-14 03:40:59.000000000) ---
Patch Set 2: Patch Set 1 was rebased

--- Message (jenkins, 2026-03-14 03:41:01.000000000) ---
Patch Set 1:

No Builds Executed

--- Message (Lustre Gerrit Janitor, 2026-03-14 03:42:10.000000000) ---
Patch Set 2:

Cannot detect any functional changes in this patch

--- Message (wc-checkpatch, 2026-03-14 03:52:15.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-03-14 03:57:20.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-03-14 04:00:56.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (jenkins, 2026-03-14 04:56:14.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/122498/ : SUCCESS

--- Message (Andreas Dilger, 2026-03-14 05:26:01.000000000) ---
Patch Set 2:

(1 comment)

--- Message (James Simmons, 2026-03-15 00:04:09.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Chris Horn, 2026-04-03 22:43:56.000000000) ---
Patch Set 2: Code-Review+1

(1 comment)

--- Message (James Simmons, 2026-04-16 16:26:39.000000000) ---
Patch Set 2:

(1 comment)

--- Message (Oleg Drokin, 2026-04-18 19:39:44.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2026-04-18 19:39:48.000000000) ---
Change has been successfully cherry-picked as b2132eb9d74ca69a676db0f0483b5be1f0304261
